# FitTrack-Svelte

./: .gitignore  .prettierrc  package-lock.json  package.json  tailwind.config.js
server/: Cargo.toml
server/src/: main.rs
src/: app.html  data.ts  hooks.server.ts  stores.ts
src/components/CreateWorkout/:  WorkoutNameInput.svelte  CreateNewExerciseEntry.svelte  CreateWorkoutEntry.svelte  ExerciseEntry.svelte  ExerciseEntryEdit.svelte  ExerciseEntryList.svelte  TopBanner.svelte  UpcomingWorkouts.svelte  WorkoutEntry.svelte  WorkoutPreviewTile.svelte
src/components/Elements/: Button.svelte
src/components/Header/: Header.svelte
src/components/Macros/: AddMacro.svelte  AddMacros.svelte  TodaysMacros.svelte
src/components/Menu/: Menu.svelte  MenuItem.svelte  MobileMenu.svelte
src/components/Workouts/: ListOfWorkouts.svelte  WorkoutCard.svelte
src/lib/: authDbConnect.ts  mongoConnect.ts  typings.ts
src/routes/: +layout.server.ts  +layout.svelte  +page.svelte
src/routes/auth/: +page.svelte
src/routes/calendar/: +layout.server.ts  +page.svelte  +server.ts  AddEventModal.svelte  Calendar.svelte  CalendarNavigation.svelte  CalendarRow.svelte  calendarStore.ts  todo.txt
src/routes/createworkout/: +page.svelte
src/routes/mealplans/: +page.svelte
src/routes/workouts/: +layout.server.ts  +page.svelte  +server.ts
src/routes/workouts/[id]/: +layout.server.ts  +page.svelte  +server.ts
src/routes/workouts/createworkout/: +page.server.ts  +page.svelte
src/stores/: macrosStores.ts
src/utils/: buildCalendar.ts  clickOutside.ts  uuid.ts
(+1 files in other folders)
