[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"] }
rocket_cors = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = "2.2"
bson = "1.2"
serde_derive = "1.0"
dotenv = "0.15"